# Cpp_Fungsi

./: .gitignore  CMakeLists.txt  main.cpp
includes/: CMakeLists.txt  factorial.h  factorials.cpp
